k8s/staging/backend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: backend
  namespace: project-staging

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:

      - name: backend

        image: 622488711452.dkr.ecr.us-west-1.amazonaws.com/task5-backend:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 20

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

  strategy:
    canary:
      steps:
      - setWeight: 20

      - pause:
          duration: 20s

      - setWeight: 50

      - pause:
          duration: 30s

      - setWeight: 100
