k8s/staging/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: project-staging
  labels:
    app: backend

spec:
  selector:
    app: backend

  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP

  type: ClusterIP
