k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: staging-ingress
  namespace: project-staging

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:

  ingressClassName: alb

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service
            port:
              number: 80
